--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+:root{
+    --deepBlue: #1a2a54;
+    --white: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+    min-height: 20vh;
+    background-image: url('https://cdn.pixabay.com/photo/2016/05/12/23/10/banner-1388939_1280.jpg');
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header h3:hover {
+    cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header h1, 
+header h3 {
+    height: min-content;
+    font-weight: bolder;
 }
 
-.App-link {
-  color: #61dafb;
+main, footer{
+    background-color: var(--deepBlue);
+    color: var(--white);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+    min-height: 60vh;
+}
+
+footer {
+    min-height: 20vh;
+}
+
+.logo {
+    margin: 0 15px 0 15px;
+    height: 50px;
+    width: 100px;
+    filter: grayscale(1);
+}
+
+.logo:hover {
+    cursor: pointer;
+    filter: grayscale(0);
+}
+
+#ghLogo:hover {
+    filter: invert(1000%) brightness(100%) contrast(1000%);
 }
