updating nav bar and resume link styling

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,6 +8,10 @@ header h3:hover {
     cursor: pointer;
 }
 
+header nav :nth-child(1){
+    color: var(--white);
+}
+
 @media only screen and (max-width: 893px) {
     nav {
         border-top-color: var(--deepBlue);
